Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-78648

RHI: Does not work with Windows10 inside VMWare (Fusion)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.4.0 Beta1
    • 5.14.0 Alpha, 6.2.2, 6.4.1
    • None
    • macOS VMWare Fusion 11.1.1, running Windows 10
    • Windows
    • 291971b91a (qt/qtdeclarative/dev) 291971b91a (qt/tqtc-qtdeclarative/dev), 95198e7ad (dev), 765323e64 (6.5), 3a21d5679 (tqtc/lts-6.2)

      Im failing to get this trivial example run with QSG_RHI=1 / QSG_INFO=1 on Windows 10 inside VmWare (Fusion, macOS).

      import QtQuick 2.13
      import QtQuick.Window 2.13
      
      Window {
          visible: true
          width: 640
          height: 480
          title: qsTr("Hello World")
      
          Rectangle {
              anchors.centerIn: parent
              width: 200
              height: 200
              color: "red"
          }
      }
      
      qt.scenegraph.general: Using QRhi with backend D3D11
        graphics API debug/validation layers: 0
        QRhi profiling and debug markers: 0
      qt.scenegraph.general: threaded render loop
      qt.scenegraph.general: Using sg animation driver
      qt.scenegraph.general: Animation Driver: using vsync: 16.67 ms
      qt.scenegraph.general: Using sg animation driver
      qt.scenegraph.general: Animation Driver: using vsync: 16.67 ms
      qt.rhi.general: DXGI 1.2 = true, FLIP_DISCARD swapchain supported = true
      qt.rhi.general: Adapter 0: 'VMware SVGA 3D' (flags 0x0)
      qt.rhi.general:   using this adapter
      qt.rhi.general: Adapter 1: 'Microsoft Basic Render Driver' (flags 0x2)
      qt.scenegraph.general: MSAA sample count for the swapchain is 1. Alpha channel requested = no.
      qt.scenegraph.general: rhi texture atlas dimensions: 2048x1024
      Failed to create vertex shader: Error 0x80070057: Falscher Parameter.
      Failed to build graphics pipeline state
      Failed to create vertex shader: Error 0x80070057: Falscher Parameter.
      Failed to build graphics pipeline state
      

        For Gerrit Dashboard: QTBUG-78648
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            njeisecke Nils Jeisecke
            Votes:
            1 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: